<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">医直达</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 登录界面 -->
    <string name="error_username_null">请输入账号</string>
    <string name="error_password_null">请输入密码</string>
    <string name="logining">正在登录</string>
    <string name="request_error">请求异常</string>
    
    <!-- 修改密码 -->
    <string name="change_password">修改密码</string>
    <string name="ignore_step">跳过</string>
    <string name="change_password_successfully">密码已修改成功!</string>
    <string name="remember_new_password">请牢记您的新密码,您可以使用新密码登录了</string>
    
     <!-- 微信绑定 -->
    <string name="wechat">微信</string>
    <string name="welcome_to_use">欢迎使用</string>
    <string name="bind_now">现在绑定</string>
    <string name="recommend_bind">建议绑定微信</string>
    <string name="bind_wechat_benefit">绑定微信,方便提现和转账</string>
    <string name="thanks_to_cooperate">感谢您的配合!\n\n您可以在个人中心继续完善个人资料</string>
    <string name="use_now">立即体验</string>
    <string name="bind_wechat">绑定账号</string>
    <string name="bind_immediately">立即绑定</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="bind_tips">绑定后,将开通结算功能,方便财务管理</string>
    <string name="unbind_tips">解除绑定,将无法正常使用结算功能</string>
    <string name="wechat_dialog_tips">\u0020\u0020\u0020\u0020\u0020\u0020\u0020您还未绑定微信账号,请绑定微信账号后,再次使用结算功能.</string>
    <string name="please_install_wechat">请先安装微信</string>
    <string name="bind_fail">绑定失败</string>
    <string name="unbind_fail">解绑失败</string>

    <!-- 忘记密码界面 -->
    <string name="auth_code_error">验证码错误，请重新输入</string>
    <string name="auth_code_null">请输入验证码</string>
    
    <!-- 挂号成功对话框 -->
    <string name="dialog_regist_success">成功挂号</string>
    <string name="dialog_regist_wait_people">前面等待人数：%d人</string>

    <!-- 通用文字,频繁使用文字 -->
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放更新</string>
    <string name="pull_to_refresh_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="aready_diagnosis_info_string">已诊信息</string>
    <string name="basic_info_string">基本信息</string>
    <string name="record_info_string">病历信息</string>
    <string name="aready_pass_info_string">过号信息</string>
    <string name="medicine_info_string">药物信息</string>
    <string name="nurse_waiting_string">候诊大厅</string>
    <string name="doctor_waiting_string">候诊室</string>
    <string name="no_match_patient_title">无匹配</string>
    <string name="no_match_patient_value">很抱歉,没有找到相关病人</string>
    <string name="search_prompt_title">快速搜索病人资料</string>
    <string name="search_prompt_value">输入病人姓名或者手机号码</string>
    
    <!-- 候诊界面文字 -->
	<string name="emergency">急诊</string>
	<string name="save">保存</string>
	<string name="save_and_register">保存并挂号</string>
	<string name="opt_call">叫号</string>
	<string name="opt_pass">过号</string>
	<string name="opt_finish">结束</string>
	<string name="opt_assign">分配</string>
	<string name="opt_rebuild">重新排队</string>
	<string name="doctor_waiting_title">%s候诊室</string>
	<string name="group_num">%d人</string>
	<string name="current_time_nobody_waiting">当前时段无人候诊</string>
	<string name="current_time_nobody_pass">当前时段无人过号</string>
	<string name="current_time_nobody_finish">当前时段无人已诊</string>
	<string name="current_time_no_appointment_time">当前非预约时段,无法过号</string>
	
	<!-- 就诊中界面文字 -->
	<string name="chief_complaint">主诉</string>
	<string name="diagnosis">诊断</string>
	<string name="prescription">处方</string>
	<string name="signs">体征</string>
	<string name="temperature">体温</string>
	<string name="temperature_colon">体温:</string>
	<string name="temperature_unit">%s℃</string>
	<string name="heartbeat">心跳</string>
	<string name="heartbeat_colon">心跳:</string>
	<string name="heartbeat_unit">%sbpm</string>
	<string name="height">身高</string>
	<string name="height_colon">身高:</string>
	<string name="height_unit">%scm</string>
	<string name="breath">呼吸</string>
	<string name="breath_colon">呼吸:</string>
	<string name="breath_unit">%s/min</string>
	<string name="weight">体重</string>
	<string name="weight_colon">体重:</string>
	<string name="weight_unit">%skg</string>
	<string name="blood_pressure">血压</string>
	<string name="blood_pressure_colon">血压:</string>
	<string name="blood_pressure_unit" formatted="false">%s/%smmhg</string>
	<string name="blood_glucose">血糖</string>
	<string name="blood_glucose_colon">血糖:</string>
	<string name="blood_glucose_unit">%smg/dl</string>
	<string name="bmi">BMI</string>
	<string name="bmi_colon">BMI:</string>
	<string name="chief_complaint_hint">描述身体状况,特殊状况,病况</string>
	<string name="add_diagnosis">添加诊断</string>
	<string name="please_add_diagnosis">请输入诊断内容</string>
	<string name="fee">费用</string>
	<string name="drug">药物</string>
	<string name="input_chief_complaint">请输入主诉信息</string>
	<string name="medical_fee">医疗费</string>
	<string name="operation_fee">手术费</string>
	<string name="equipment_charges">设备费</string>
	<string name="already_add">已添加</string>
	<string name="classification">分类</string>
	<string name="search_drug_hint">药物编码,关键词</string>
	<string name="sync_data">同步数据</string>
	<string name="sync_data_success">同步完成</string>
	<string name="please_sync_data_in_personal_center">请到个人中心同步数据</string>
	<string name="yuan">元</string>
	<string name="specification_colon">规格:</string>
	<string name="unit_price_colon">单价:</string>
	<string name="single_dosage_colon">单次用量:</string>
	<string name="single_dosage">单次用量</string>
	<string name="direction_colon">用法:</string>
	<string name="direction">用法</string>
	<string name="frequency_colon">频度:</string>
	<string name="frequency">频度</string>
	<string name="comment_colon">备注:</string>
	<string name="comment">备注</string>
	<string name="amount">总量</string>
	<string name="amount_unit">总量单位</string>
	<string name="days">天数</string>
	<string name="not_yet_group">未分组</string>
	<string name="group">分组</string>
	<string name="no_fee">请添加费用或药物</string>
	<string name="no_presciption">请添加处方</string>
	<string name="total_sum">合计: </string>
	<string name="confirm_to_delete">确认删除?</string>
	<string name="more_than_zero">金额必须大于0元</string>
	<string name="quantity_more_than_zero">总量必须大于0</string>
	<string name="total_inventory">总库存</string>
	
	<!-- 入库 -->
	<string name="warehousing">入库</string>
	<string name="check_inventory">盘点</string>
	<string name="breakage">报损</string>
	<string name="refund">退货</string>
	<string name="unit">单位</string>
	<string name="price_adjust">调价</string>
	<string name="warehousing_quantity">*入库数量</string>
	<string name="expiration_date">*有效期至</string>
	<string name="production_date"> 生产日期</string>
	<string name="purchase_price">*采购价</string>
	<string name="purchase_price_hint">采购药物价格</string>
	<string name="ov_price">*处方价</string>
	<string name="ov_price_hint">处方用药价格</string>
	<string name="sale_price">*售药价</string>
	<string name="sale_price_hint">药品销售价格</string>
	<string name="batch_number">*批号</string>
	<string name="batch_number_code">批号编码</string>
	<string name="suppliers"> 供应商</string>
	<string name="purchase_number"> 采购编号</string>
	<string name="add_to_list">加入清单</string>
	
	<!-- 找回密码界面文字 -->
    <string name="activity_pwd_verify_prompt">您的密保手机号码是%s,请点击&quot;获取验证码&quot;</string>
    <string name="activity_pwd_verify_getAuthCode">获取验证码</string>
    <string name="activity_pwd_verify_regetAuthCode">重新发送</string>
    <string name="activity_pwd_verify_sending">正在发送(%d)</string>
    
    <string name="activity_pwd_edit_pwd_null">请输入新密码</string>
    <string name="activity_pwd_edit_comfirm_pwd_null">请输入确认新密码</string>
    <string name="activity_pwd_edit_pwd_different">密码输入不一致</string>
    
    <string name="query_ing">正在查询</string>
    <string name="no_body">无人%s</string>
    <string name="anamnesis">既往史</string>
    <string name="allergic_history">过敏史</string>
    <string name="medication_compliance">服药情况</string>
    <string name="other_information">其他信息</string>
    
    <!-- 病人详细信息 -->
    <string name="new_account">新用户</string>
    <string name="patient_birthday">生日:</string>
    <string name="patient_phone">手机:</string>	
    <string name="patient_identity">身份证:</string>
    <string name="emergency_contact">紧急联系人:</string>
    <string name="contact_tel">联系人电话:</string>
    <string name="contact_relation">联系人关系:</string>
    <string name="patient_email">邮箱:</string>
    <string name="internal_number">内部编号:</string>
    <string name="social_security_number">社保号:</string>
    <string name="medical_insurance_number">医保号:</string>
    <string name="marital_status">婚姻状况:</string>
    <string name="nation">民族:</string>
    <string name="address">住址:</string>
    <string name="company">就职公司:</string>
    <string name="position">职位:</string>
    
    <!-- 病人信息编辑界面 -->
    <string name="birthday_no_less_than_30">生日不能小于30天!</string>
    
    <!-- 结算 -->
    <string name="settlement">结算</string>
    <string name="no_more_than_200_yuan">单次结算金额不可超过200元</string>
    <string name="no_less_than_1_yuan">结算金额不可小于1元</string>
    <string name="more_than_no_settle_balance">超出待结算金额</string>
    <string name="binding_tips">您绑定的微信号是%s，金额将转入微信零钱包中，请注意查收！</string>
    <string name="withdrawal_fail">提现失败</string>
    <string name="withdrawal_success">提现成功</string>

</resources>