<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg2" >

        <TextView
            android:id="@+id/tv_change_successfully"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/change_password_successfully"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_change_successfully"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/remember_new_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backToLoginActivity"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/selector_bg_wechat_bind_normal"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>