<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg2" >

        <TextView
            android:id="@+id/tv_first_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:text="首次使用"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_recommend_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_first_note"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/recommend_bind"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recommend_bind"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/bind_wechat_benefit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_bind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_ignore_step"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/selector_bg_wechat_bind_highlight"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="15dp"
            android:text="@string/bind_now"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_ignore_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/selector_bg_wechat_bind_normal"
            android:gravity="center"
            android:onClick="navigateToWechatBindSuccessfullyActivity"
            android:padding="15dp"
            android:text="@string/ignore_step"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlt_bind"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ebecee" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/box10_nor"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llt_wechat"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/iv_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wechat_nor" />

                <TextView
                    android:id="@+id/tv_wechat_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/wechat"
                    android:textSize="22sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#CACACA" />

            <TextView
                android:id="@+id/tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:text="@string/bind_tips"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_operation"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="onClick"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/selector_bg_button_green_oval"
                android:text="@string/bind"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>