<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box12" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            layout="@layout/layout_title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:gravity="right"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/height"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:gravity="right"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/weight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:ems="10"
                android:gravity="right"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bmi"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:ems="10"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/heartbeat"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_heartbeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:ems="10"
                android:gravity="right"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/breath"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_breath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:ems="10"
                android:gravity="right"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/blood_pressure"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_blood_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:ems="10"
                android:gravity="right"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/box3_nor"
            android:padding="15dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/blood_glucose"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_blood_glucose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:ems="10"
                android:gravity="right"
                android:onClick="onClick"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>